acp-001 [satish] url shortner generated code by requirement engine generator and update readme file too